--- a/.classpath
+++ b/.classpath
@@ -2,7 +2,9 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.7"/>
-	<classpathentry kind="lib" path="C:/Users/Acer/Documents/eclipse/Essentials.jar" sourcepath="/Essentials/src"/>
-	<classpathentry kind="lib" path="C:/Users/Acer/Documents/eclipse/bukkit-1.6.1-R0.1-20130703.062218-3.jar"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/3"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
+	<classpathentry kind="lib" path="C:/Users/Acer/Desktop/minecraft_servers/plugins/Essentials.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Acer/Desktop/minecraft_servers/craftbukkit-1.6.2-R0.2-20130814.074349-13.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
