--- a/.classpath
+++ b/.classpath
@@ -1,10 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="src"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/jdk1.7.0_40"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.7"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/3"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
-	<classpathentry kind="lib" path="C:/Users/Acer/Desktop/minecraft_servers/plugins/Essentials.jar"/>
-	<classpathentry kind="lib" path="C:/Users/Acer/Desktop/minecraft_servers/craftbukkit-1.6.2-R0.2-20130814.074349-13.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Acer/Desktop/minecraft_servers/craftbukkit-1.6.4-R0.1-20131010.233836-11.jar" sourcepath="/CraftBukkit">
+		<attributes>
+			<attribute name="javadoc_location" value="http://jd.bukkit.org/dev/apidocs"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
