--- a/src/plugin.yml
+++ b/src/plugin.yml
@@ -1,7 +1,7 @@
 name: SimplePlugin
 main: io.github.lambo993.SimplePlugin
 version: 0.7.4
-authors: [Lambo993, Kjordo771]
+authors: [Lambo993]
 description: This is a very simple plugins.
 commands:
   simpleplugin:
@@ -15,6 +15,8 @@ commands:
     description: Hide yourself from a player.
     aliases: [hidefrom]
     usage: /<command> <player>
+  unhideme:
+    description: Unhide yourself from a player.
   freeitem:
     description: Gives you a free item!
     usage: /<command> <item|numeric> [amount]
